--- a/css/subscription.css
+++ b/css/subscription.css
@@ -1,6 +1,6 @@
 :root {
-    --subscription-button-height: 130px;
-    --subscription-button-width: 40px;
+    --subscription-button-height: 40px;
+    --subscription-button-width: 130px;
     --subscription-button-font-size: 16px;
     --subscription-inner-wrapper-width: 300px;
     --subscription-inner-wrapper-padding: 24px;
@@ -16,26 +16,23 @@
     height: var(--subscription-button-height);
     min-height: var(--subscription-button-height);
     background-color: var(--secondary-color);
-    right: 0;
-    bottom: 140px;
+    left: 100dvw;
+    bottom: var(--subscription-button-margin-bottom);
     border: none;
     border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-    -webkit-writing-mode: sideways-lr;
-        -ms-writing-mode: sideways-lr;
-            writing-mode: sideways-lr;
-    -webkit-text-orientation: sideways-right;
-            text-orientation: sideways-right;
+    border-top-right-radius: 5px;
     font-style: italic;
     color: #FF4D00;
     font-size: var(--subscription-button-font-size);
     z-index: 3;
+    transform: rotate(-90deg);
+    transform-origin: bottom left;
 }
 
 .subscription-inner-wrapper {
     position: fixed;
     left: 100dvw;
-    bottom: calc(var(--subscription-button-margin-bottom) - (190px - var(--subscription-button-height)) / 2);
+    bottom: calc(var(--subscription-button-margin-bottom) - (190px - var(--subscription-button-width)) / 2);
     display: flex;
     flex-direction: column;
     border-top-left-radius: 5px;
